--- a/Marchen/Views/LyricLineTableViewCell.xib
+++ b/Marchen/Views/LyricLineTableViewCell.xib
@@ -9,18 +9,19 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LyricLineCell" rowHeight="39" id="KGk-i7-Jjw" customClass="LyricLineTableViewCell" customModule="Marchen" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="210" height="39"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LyricLineCell" rowHeight="80" id="KGk-i7-Jjw" customClass="LyricLineTableViewCell" customModule="Marchen" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="210" height="39"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UnderlineImage" translatesAutoresizingMaskIntoConstraints="NO" id="Pf0-EH-dG0">
-                        <rect key="frame" x="0.0" y="0.0" width="210" height="39"/>
-                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ODC-pL-Gye" userLabel="Underline View">
+                        <rect key="frame" x="10" y="0.0" width="300" height="75"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    </view>
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LVj-E7-2xy">
-                        <rect key="frame" x="20" y="20" width="170" height="19"/>
+                        <rect key="frame" x="20" y="20" width="280" height="60"/>
                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <textInputTraits key="textInputTraits"/>
                         <connections>
@@ -31,10 +32,10 @@
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="LVj-E7-2xy" secondAttribute="trailing" constant="20" id="5DX-5i-1RI"/>
                     <constraint firstItem="LVj-E7-2xy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="5aB-Wg-6ct"/>
-                    <constraint firstItem="Pf0-EH-dG0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="L6b-d4-AC2"/>
-                    <constraint firstAttribute="bottom" secondItem="Pf0-EH-dG0" secondAttribute="bottom" id="Mmh-1e-hsw"/>
-                    <constraint firstAttribute="trailing" secondItem="Pf0-EH-dG0" secondAttribute="trailing" id="NmL-AG-HOW"/>
-                    <constraint firstItem="Pf0-EH-dG0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="cFx-Bc-e3n"/>
+                    <constraint firstAttribute="bottom" secondItem="ODC-pL-Gye" secondAttribute="bottom" constant="5" id="A7K-f3-bfR"/>
+                    <constraint firstItem="ODC-pL-Gye" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="JRv-Fe-0yy"/>
+                    <constraint firstItem="ODC-pL-Gye" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="TdY-jK-ipm"/>
+                    <constraint firstAttribute="trailing" secondItem="ODC-pL-Gye" secondAttribute="trailing" constant="10" id="VQo-XB-5Bb"/>
                     <constraint firstAttribute="bottom" secondItem="LVj-E7-2xy" secondAttribute="bottom" id="eBb-s9-Xca"/>
                     <constraint firstItem="LVj-E7-2xy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="uXx-Xv-326"/>
                 </constraints>
@@ -42,11 +43,9 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="lyricTextField" destination="LVj-E7-2xy" id="eYc-Ip-kos"/>
+                <outlet property="underlineView" destination="ODC-pL-Gye" id="gOD-7a-IZL"/>
             </connections>
-            <point key="canvasLocation" x="55.072463768115945" y="150.33482142857142"/>
+            <point key="canvasLocation" x="191.30434782608697" y="164.0625"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="UnderlineImage" width="1125" height="245"/>
-    </resources>
 </document>
