--- a/Marchen/Views/Base.lproj/Main.storyboard
+++ b/Marchen/Views/Base.lproj/Main.storyboard
@@ -114,41 +114,41 @@
             <objects>
                 <viewController id="qgr-fc-OV2" customClass="NewSongViewController" customModule="Marchen" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TaV-rl-1vS">
-                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Key" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0gS-YH-OSe">
-                                <rect key="frame" x="183" y="54" width="42" height="30"/>
+                                <rect key="frame" x="20" y="150" width="394" height="30"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yRR-X5-4ao">
-                                <rect key="frame" x="44" y="94" width="320" height="299"/>
+                                <rect key="frame" x="0.0" y="190" width="414" height="216"/>
                             </pickerView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0EP-gU-kIi">
-                                <rect key="frame" x="364" y="94" width="488" height="299"/>
+                                <rect key="frame" x="0.0" y="456" width="414" height="406"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChordCell" id="r1R-Kd-kdP" customClass="ChordTableViewCell" customModule="Marchen" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="488" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="r1R-Kd-kdP" id="Ksw-Ir-b4y">
-                                            <rect key="frame" x="0.0" y="0.0" width="488" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rGM-xL-qfa">
-                                <rect key="frame" x="814" y="58" width="18" height="22"/>
+                                <rect key="frame" x="376" y="420" width="18" height="22"/>
                                 <state key="normal" image="plus" catalog="system"/>
                                 <connections>
                                     <action selector="addChordButtonClicked:" destination="qgr-fc-OV2" eventType="touchUpInside" id="MKH-Ls-gMW"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chord" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QxM-GP-DWE">
-                                <rect key="frame" x="573.5" y="54" width="69" height="30"/>
+                                <rect key="frame" x="20" y="416" width="394" height="30"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -744,11 +744,18 @@
                         <viewLayoutGuide key="safeArea" id="h1g-cb-Dsa"/>
                     </view>
                     <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="248-Bu-UIP">
-                        <barButtonItem key="rightBarButtonItem" systemItem="play" id="ZkJ-z9-v4g">
-                            <connections>
-                                <action selector="playRecordedButtonClicked:" destination="H7e-w4-wKg" id="9LJ-oY-U5V"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="play" id="ZkJ-z9-v4g">
+                                <connections>
+                                    <action selector="playRecordedButtonClicked:" destination="H7e-w4-wKg" id="9LJ-oY-U5V"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem image="recordingtape" catalog="system" id="fh7-6M-QS0">
+                                <connections>
+                                    <action selector="recordButtonClicked:" destination="H7e-w4-wKg" id="AK0-aS-cXa"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="bpmLabel" destination="JOT-lP-feQ" id="R2f-Vq-SZP"/>
@@ -759,11 +766,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5W8-59-bXJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4227.536231884058" y="154.6875"/>
+            <point key="canvasLocation" x="4532" y="155"/>
         </scene>
     </scenes>
     <resources>
         <image name="play" catalog="system" width="120" height="128"/>
         <image name="plus" catalog="system" width="128" height="113"/>
+        <image name="recordingtape" catalog="system" width="128" height="60"/>
     </resources>
 </document>
