--- a/Marchen/Views/Base.lproj/Main.storyboard
+++ b/Marchen/Views/Base.lproj/Main.storyboard
@@ -772,6 +772,7 @@
                         <outlet property="bpmLabel" destination="JOT-lP-feQ" id="R2f-Vq-SZP"/>
                         <outlet property="playButton" destination="m2N-NG-697" id="RAo-ZS-MOi"/>
                         <outlet property="recordButton" destination="fh7-6M-QS0" id="Gdm-yx-Aw6"/>
+                        <outlet property="shareButton" destination="mvm-ct-xb9" id="Urd-JQ-Stx"/>
                         <outlet property="stackView" destination="S8p-qt-flY" id="EDv-i1-K0h"/>
                         <outlet property="stepperUI" destination="qHn-pY-a79" id="kth-sC-dck"/>
                     </connections>
