--- a/Marchen/Views/Base.lproj/Main.storyboard
+++ b/Marchen/Views/Base.lproj/Main.storyboard
@@ -771,6 +771,7 @@
                     <connections>
                         <outlet property="bpmLabel" destination="JOT-lP-feQ" id="R2f-Vq-SZP"/>
                         <outlet property="playButton" destination="m2N-NG-697" id="RAo-ZS-MOi"/>
+                        <outlet property="playRecordedButton" destination="ZkJ-z9-v4g" id="NSe-Gr-TAG"/>
                         <outlet property="recordButton" destination="fh7-6M-QS0" id="Gdm-yx-Aw6"/>
                         <outlet property="shareButton" destination="mvm-ct-xb9" id="Urd-JQ-Stx"/>
                         <outlet property="stackView" destination="S8p-qt-flY" id="EDv-i1-K0h"/>
